--- a/src/index.css
+++ b/src/index.css
@@ -245,6 +245,10 @@ html, body {
   z-index: 1;
 }
 
+.z-index-10 {
+  z-index: 10;
+}
+
 .modal-window {
   width: 500px;
   height: 290px;
@@ -253,6 +257,14 @@ html, body {
   border-radius: 16px;
   background-color: var(--background-color);
 }
+
+.info {
+  color: var(--color);
+  font-size: 20px;
+  font-weight: 700;
+  padding-top: 90px;
+  text-align: center;
+} 
 
 .modal-title {
   margin: 0;
