--- a/src/index.css
+++ b/src/index.css
@@ -37,12 +37,15 @@ html, body {
 }
 
 .left-panel {
+  padding: 130px 10px 20px 10px;
   min-width: 250px;
   flex-grow: 1;
   height: 100%;
+  color: var(--color);
 }
 
 .right-panel {
+  position: relative;
   min-width: 250px;
   flex-grow: 1;
   height: 100%;
