--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,12 @@ html, body {
   color: var(--color);
 }
 
+.left-panel-border {
+  border: 1px solid var(--input-border);
+  border-radius: 7px;
+  padding: 10px;
+}
+
 .right-panel {
   position: relative;
   min-width: 250px;
@@ -84,6 +90,7 @@ html, body {
 }
 
 .search-input-wrapper {
+  position: relative;
   display: flex;
   height: 38px;
   gap: 26px;
@@ -108,9 +115,18 @@ html, body {
 
 .search-input {
   width: 595px;
+}
+
+.search-btn {
+  position: absolute;
+  top: 7px;
+  left: 555px;
+  width: 25px;
+  height: 25px;
   background-image: var(--search-input-background-image);
   background-repeat: no-repeat;
-  background-position: 97% center;
+  background-position: center center;
+  cursor: pointer;
 }
 
 .select-todos {
@@ -222,6 +238,17 @@ html, body {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #6C63FF;
+}
+
+.hidden {
+  opacity: 0;
+  transform: translateX(-400px);
+  transition: transform 0.7s ease, opacity 0.7s ease;
+}
+
+.show {
+  opacity: 1;
+  transform: translateX(0);
 }
 
 .checkbox-wrapper {
