--- a/src/index.css
+++ b/src/index.css
@@ -34,11 +34,12 @@ html, body {
 .app-wrapper {
   display: flex;
   height: 100%;
+  justify-content: center;
 }
 
 .left-panel {
-  padding: 130px 10px 20px 10px;
-  min-width: 250px;
+  padding: 200px 10px 20px 10px;
+  min-width: 200px;
   flex-grow: 1;
   height: 100%;
   color: var(--color);
@@ -50,9 +51,20 @@ html, body {
   padding: 10px;
 }
 
+.side-bar-item {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 3px;
+  border-bottom: 1px dashed var(--input-border);
+}
+
+.side-bar-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
 .right-panel {
   position: relative;
-  min-width: 250px;
+  width: 200px;
   flex-grow: 1;
   height: 100%;
   padding-top: 95px;
@@ -74,7 +86,7 @@ html, body {
 }
 
 .container {
-  width: 750px;
+  width: 780px;
   min-height: 100%;
   position: relative;
   padding-top: 40px;
@@ -92,6 +104,7 @@ html, body {
 .search-input-wrapper {
   position: relative;
   display: flex;
+  align-items: center;
   height: 38px;
   gap: 26px;
   margin-bottom: 30px;
@@ -120,7 +133,7 @@ html, body {
 .search-btn {
   position: absolute;
   top: 7px;
-  left: 555px;
+  left: 515px;
   width: 25px;
   height: 25px;
   background-image: var(--search-input-background-image);
@@ -131,6 +144,7 @@ html, body {
 
 .select-todos {
   width: 65px;
+  height: 38px;
   padding: 0px 5px;
   font-size: 14px;
   font-weight: 500;
@@ -144,6 +158,7 @@ html, body {
 
 .theme-btn {
   width: 38px;
+  height: 38px;
   border: none;
   border-radius: 5px;
   background-color: #6C63FF;
